# jitBrainsForth

./: AssemblerUtils.h  CMakeLists.txt  CompilerUtility.h  ForthDictionary.cpp  ForthDictionary.h  JitGenerator.h  LICENSE  README.md  StackManager.cpp  StackManager.h  StringInterner.h  UtilitySDL.h  X86_64Assembler.cpp  X86_64Assembler.h  fact.f  interpreter.h  jitContext.cpp  jitContext.h  jitLabels.h  main.cpp  quit.cpp  quit.h  start.f  tests.h  utility.h
docs/: Forth Words.md  JitContext.md  Locals.md  LoopChecks.md  Loops.md  Register Usage.md  StackHelpers.md  compilerUtility.md  fact.md
